Add truncation markers

--- a/blog/2024-07-18-automatic-coding.mdx
+++ b/blog/2024-07-18-automatic-coding.mdx
@@ -9,6 +9,8 @@ tags: [futurology]
 
 It's pretty clear to anyone paying attention: LLMs can code. This fact is changing how we think about software development.
 
+<!-- truncate -->
+
 In the auto-code project, I'm exploring just how far we can push LLM coding abilities. I've noticed two main ways AI is being used for coding:
 
 1. AI-Assisted Coding: This is where professional developers are heading. Tools like GitHub Copilot, and fancier ones like Cursor and Devin are becoming part of a coder's daily life. Even if AI ends up writing most of the code, the human is still in charge.
