--- a/blog/2024-08-01-introducing-react-todo.mdx
+++ b/blog/2024-08-01-introducing-react-todo.mdx
@@ -8,6 +8,9 @@ tags: []
 # The React Todo App
 
 Todo apps are a classic example app, here we'll see how a few models fare when trying to implement one in React.
+
+<!-- truncate -->
+
 The models we're going to use are:
 * haiku (claude-3-haiku-20240307)
 * sonnet (claude-3-5-sonnet-20240620)
