--- a/blog/2024-08-14-todo-with-more-features.mdx
+++ b/blog/2024-08-14-todo-with-more-features.mdx
@@ -7,7 +7,9 @@ tags: []
 
 # A fully featured Todo App
 
-The previous app was too easy for all the models, so I iterated on the prompt until I came up with
+The previous app was too easy for all the models, so I iterated on the prompt until I came up with a more detailed prompt.
+
+<!-- truncate -->
 
 ```markdown title="App Prompt"
 Build a todo app.
