Slug and author fixes

--- a/blog/2024-10-15-understanding-langgraph-types.mdx
+++ b/blog/2024-10-15-understanding-langgraph-types.mdx
@@ -1,4 +1,9 @@
-# Understanding LangGraph Types
+---
+slug: understanding-langgraph-types
+title: Understanding LangGraph Types
+authors: [gingerhendrix]
+tags: []
+---
 
 I often run into difficulties trying to build generic apis on top of LangGraph. The types are quite complex so I needed a reference.
 
