--- a/blog/2024-10-29-automatic-coding-tools.mdx
+++ b/blog/2024-10-29-automatic-coding-tools.mdx
@@ -24,5 +24,11 @@ For now this is just an unsorted, incomplete list of tools related to AI-driven 
 - [GPTEngineer](https://lovable.dev/gpt-engineer/)
 - [Bolt.new](https://bolt.new/)
 - [RapidPages](https://www.rapidpages.com/) - Design only
+- [Claude Artifacts](http://claude.ai)
 
+### Terminal Based
+
+- [Aider](https://aider.chat/)
+- [GPTme](https://gptme.org/)
+- [llm.py](https://llm.datasette.io/en/stable/) - More of a llm swiss army knife
 
