--- a/blog/2024-11-27-definition-of-agent.mdx
+++ b/blog/2024-11-27-definition-of-agent.mdx
@@ -48,7 +48,7 @@ Libraries like LangGraph are designed to make implementing agentic loops easier.
 ![Agentic Loop](./2024-11-27/agentic_loop.png)
 
 
-# Composition of Agents
+## Composition of Agents
 
 Let me present my current working definition of an Agent
 
@@ -70,6 +70,6 @@ A final thing to think about in agentic composition is that through LLMs' code-w
 
 ![Agora Protocol](./2024-11-27/agora.png)
 
-# Conclusion
+## Conclusion
 
 While *Agent* may be a redundant term when it comes to defining software systems, it is a useful term when thinking about how software systems can be linked together. We're moving toward a future where agents won't just be isolated components but participants in a rich ecosystem of interacting systems, and we'll need to develop new vocabulary, patterns, and ideas to describe and build this future.
