--- a/blog/2024-12-02-aws-multi-agent-orchestrator.mdx
+++ b/blog/2024-12-02-aws-multi-agent-orchestrator.mdx
@@ -26,25 +26,26 @@ This library is fairly squarely aimed at AWS Solutions Architects etc.  It provi
 - Amazon Lex
 
 Their e-commerce customer support agent example is a good example of the kind of thing you might build with this library.
-![E-commerce Support Simulator Sample App](./2024-11-28/aws_example_architecture.jpg)
+![E-commerce Support Simulator Sample App](./2024-12-02/aws_example_architecture.jpg)
 
 It's unfortunate they felt they needed to reinvent the wheel here. It obscures the useful part of the library, which is just a simple multi-agent conversation router.
 
 ## Multi-Agent Orchestration
 
-The really interesting bit is what do the author's mean by "Multi-Agent Orchestration"?  It turns out they implement a single simple pattern we'll refer to as the *Router* pattern.
+So what do the author's mean by "Multi-Agent Orchestration"?  It turns out they implement a single simple pattern we'll refer to as the *Router* pattern.
 
-![AWS Multi-Agent Orchestration](./2024-11-28/aws_multi_agent_orchestration.png)
+![AWS Multi-Agent Orchestration](./2024-12-02/aws_multi_agent_orchestration.png)
 
 The router is just a simple classifier. Given a description of each of the agents, and the full conversation history it must decide which agent to send the latest message to.
 
-Each agent has a local conversation history which only contains the messages it's received and the responses it's sent.  When the selected agent generates a response this is just sent straight back to the user.
+Each agent has a local conversation history which only contains the messages it's received and the responses it's sent.  When the selected agent generates a response this is sent straight back to the user, the router is only involved in selecting the agent.
 
 ## Prompt
 
 The classifier is implemented as a single prompt.
 
-```
+<pre style={{whiteSpace: 'pre-line'}}>
+{`
 You are AgentMatcher, an intelligent assistant designed to analyze user queries and match them with the most suitable agent or department. Your task is to understand the user's request, identify key entities and intents, and determine which agent or department would be best equipped to handle the query.
 
 Important: The user's input may be a follow-up response to a previous interaction. The conversation history, including the name of the previously selected agent, is provided. If the user's input appears to be a continuation of the previous conversation (e.g., "yes", "ok", "I want to know more", "1"), select the same agent as before.
@@ -124,7 +125,8 @@ selected_agent: agent-name-c
 confidence: 0.9
 
 Skip any preamble and provide only the response in the specified format.
-```
+`}
+</pre>
 
 Seems like a fairly standard prompt:
 - the task is well defined (except for the "unkwnown" typo)
